--- a/Signup.html
+++ b/Signup.html
@@ -1,87 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="icon" href="/Mini-Project 1/ProjectIcon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Mini-Project 1/Signup.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-
+    <link rel="icon" href="/Images/ProjectIcon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/CSS/Signup.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- header -->
     <header>
-        <nav>
-            <div class="navcontainer">
-                <input type="text" placeholder="Search Artists, lyrics etc..">
-                    <a href="/Mini-Project 1/Home.html"><img src="/Mini-Project 1/Project Logo.png" alt=""></a>
-                <!-- <div id="Actionkeys">   
+      <nav>
+        <div class="navcontainer">
+          <input type="text" placeholder="Search Artists, lyrics etc.." />
+          <a href="/Mini-Project 1/Home.html"
+            ><img src="/Mini-Project 1/Project Logo.png" alt=""
+          /></a>
+          <!-- <div id="Actionkeys">   
                     <a class="type" href="#">Sign Up</a>
                     <a href="#">Login</a>
                 </div> -->
-            </div>
-            <div class="secondNav">
-                <div class="secondcontainer">
-                    <a href="https://www.billboard.com/charts/hot-100/" target="_blank">Hot 100 Billboards</a>
-                    <a href="/Mini-Project 1/Home.html">Featured Artists</a>
-                    <a href="/Mini-Project 1/Home.html">Events</a>
-                    <a href="/Mini-Project 1/Home.html">Charts</a>
-                </div>
-            </div>
-        </nav>    
+        </div>
+        <div class="secondNav">
+          <div class="secondcontainer">
+            <a href="https://www.billboard.com/charts/hot-100/" target="_blank"
+              >Hot 100 Billboards</a
+            >
+            <a href="/Mini-Project 1/Home.html">Featured Artists</a>
+            <a href="/Mini-Project 1/Home.html">Events</a>
+            <a href="/Mini-Project 1/Home.html">Charts</a>
+          </div>
+        </div>
+      </nav>
     </header>
 
-
     <div class="form-container">
-        <h2>Sign Up</h2>
-        <form>
-            <div class="form-group">
-                <label for="signup-name">Name:</label>
-                <input type="text" id="signup-name" name="signup-name" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-email">Email:</label>
-                <input type="email" id="signup-email" name="signup-email" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-password">Password:</label>
-                <input type="password" id="signup-password" name="signup-password" required>
-            </div>
-            <a href="/Mini-Project 1/Home.html" class="btn" type="submit">Sign Up</a>
-        </form>
-        <span>Already Have an Account? <a href="/Mini-Project 1/SignIn.html">Sign In</a></span>
+      <h2>Sign Up</h2>
+      <form>
+        <div class="form-group">
+          <label for="signup-name">Name:</label>
+          <input type="text" id="signup-name" name="signup-name" required />
+        </div>
+        <div class="form-group">
+          <label for="signup-email">Email:</label>
+          <input type="email" id="signup-email" name="signup-email" required />
+        </div>
+        <div class="form-group">
+          <label for="signup-password">Password:</label>
+          <input
+            type="password"
+            id="signup-password"
+            name="signup-password"
+            required
+          />
+        </div>
+        <a href="/Mini-Project 1/Home.html" class="btn" type="submit"
+          >Sign Up</a
+        >
+      </form>
+      <span
+        >Already Have an Account?
+        <a href="/Mini-Project 1/SignIn.html">Sign In</a></span
+      >
     </div>
 
-
     <!-- footer -->
-<footer class="bazzfooter">
-    <footer class="footer">
+    <footer class="bazzfooter">
+      <footer class="footer">
         <div class="feedback-form">
-            <h3>Feedback!</h3>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+          <h3>Feedback!</h3>
+          <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required />
 
-                <label for="email">Email:</label>
-                <input type="text" id="email" name="email" required>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" required />
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
 
-                <button type="submit">Submit Feedback</button>
-            </form>
+            <button type="submit">Submit Feedback</button>
+          </form>
         </div>
         <div class="iconic">
-            <div class="follow">follow us:</div>
-            <a href="https://www.facebook.com/" target="_blank"><i class='bx bxl-facebook'></i></a>
-            <a href="https://twitter.com/?lang=en" target="_blank"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class='bx bxl-instagram' ></i></a>
-            <a href="https://www.youtube.com/" target="_blank"><i class='bx bxl-youtube' ></i></a>
+          <div class="follow">follow us:</div>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="bx bxl-facebook"></i
+          ></a>
+          <a href="https://twitter.com/?lang=en" target="_blank"
+            ><i class="bx bxl-twitter"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a href="https://www.youtube.com/" target="_blank"
+            ><i class="bx bxl-youtube"></i
+          ></a>
         </div>
+      </footer>
+      <div class="rights">&copy; 2023 Bazz!; All Rights Reserved</div>
     </footer>
-    <div class="rights">&copy; 2023 Bazz!; All Rights Reserved</div>
-</footer>
-
-</body>
+  </body>
 </html>
