--- a/Home.html
+++ b/Home.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bazz!</title>
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="/CSS/Home.css">
 
-    <link rel="icon" href="ProjectIcon.ico" type="image/x-icon">
+    <link rel="icon" href="/Images/ProjectIcon.ico" type="image/x-icon">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -16,10 +16,10 @@
         <nav>
             <div class="navcontainer">
                 <input type="text" placeholder="Search Artists, lyrics etc..">
-                    <a href="#"><img src="Project Logo.png" alt=""></a>
+                    <a href="#"><img src="/Images/Project Logo.png" alt=""></a>
                 <div id="Actionkeys">   
-                    <a class="type" href="/Mini-Project 1/SignIn.html">Sign In</a>
-                    <a href="/Mini-Project 1/Signup.html">Sign Up</a>
+                    <a class="type" href="/SignIn.html">Sign In</a>
+                    <a href="/Signup.html">Sign Up</a>
                 </div>
             </div>
             <div class="secondNav">
@@ -44,30 +44,30 @@
         <section class="contentsongs" id="newsong">
             <div class="contentholder">
                 <div class="newreleasecontent1">
-                    <a href="#overlay1"><img src="new release content 1.jpg" alt=""></a>
+                    <a href="#overlay1"><img src="/Images/new release content 1.jpg" alt=""></a>
                     <p><span class="type1">SB19</span> Release a new song! Title <span class="type2">"Gento"</span></p>
                 </div>
                 <div class="newreleasecontent2">
-                    <a href="#overlay2"><img src="new releas content 2.jpg" alt=""></a>
+                    <a href="#overlay2"><img src="/Images/new releas content 2.jpg" alt=""></a>
                     <p><span class="type1">Dilaw</span> Release a new song! Title <span class="type2">"Uhaw"</span></p>
                 </div>
                 <div class="newreleasecontent3">
-                    <a href="#overlay3"><img src="new realease content 3.jpg" alt=""></a>
+                    <a href="#overlay3"><img src="/Images/new realease content 3.jpg" alt=""></a>
                     <p><span class="type1">Arthur Nery</span> Release a new song! Title <span class="type2">"O ninanais"</span></p>
                 </div>
             </div>
 
             <div class="contentholder2">
                 <div class="newreleasecontent4">
-                    <a href="#overlay4"><img src="new release content 4.jpg" alt=""></a>
+                    <a href="#overlay4"><img src="/Images/new release content 4.jpg" alt=""></a>
                     <p><span class="type1">FLOW G</span> Release a new song! Title <span class="type2">"Rapstar"</span></p>
                 </div>
                 <div class="newreleasecontent5">
-                    <a href="#overlay5"><img src="new release content 5.jpg" alt=""></a>
+                    <a href="#overlay5"><img src="/Images/new release content 5.jpg" alt=""></a>
                     <p><span class="type1">Post Malone</span> Release a new song! Title <span class="type2">"Stay"</span></p>
                 </div>
                 <div class="newreleasecontent6">
-                    <a href="#overlay6"><img src="new release content 6.jpg" alt=""></a>
+                    <a href="#overlay6"><img src="/Images/new release content 6.jpg" alt=""></a>
                     <p><span class="type1">SZA</span> Release a new song! Title <span class="type2">"Kill Bill"</span></p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
             <div class="popup" id="overlay1">
                 <div class="pop">
                     <a class="close" href="#">&times;</a>
-                    <img src="new release content 1.jpg" alt="">
+                    <img src="/Images/new release content 1.jpg" alt="">
                     <h3>Listen to GENTO now: </h3>    
                     <div class="icontent">
                         <ul>
@@ -90,7 +90,7 @@
             <div class="popup2" id="overlay2">
                 <div class="pop2">
                     <a class="close2" href="#">&times;</a>
-                    <img src="new releas content 2.jpg" alt="">
+                    <img src="/Images/new releas content 2.jpg" alt="">
                     <h3>Listen to UHAW now: </h3>
                     <div class="icontent2">
                         <ul>
@@ -105,7 +105,7 @@
             <div class="popup3" id="overlay3">
                 <div class="pop3">                
                     <a class="close3" href="#">&times;</a>
-                    <img src="new realease content 3.jpg" alt="">
+                    <img src="/Images/new realease content 3.jpg" alt="">
                     <h3>Listen to O ninanais now: </h3>
                     <div class="icontent3">
                         <ul>
@@ -120,7 +120,7 @@
             <div class="popup4" id="overlay4">
                 <div class="pop4">
                     <a class="close4" href="#">&times;</a>
-                    <img src="new release content 4.jpg" alt="">
+                    <img src="/Images/new release content 4.jpg" alt="">
                     <h3>Listen to RAPSTAR now: </h3>    
                     <div class="icontent4">
                         <ul>
@@ -135,7 +135,7 @@
             <div class="popup5" id="overlay5">
                 <div class="pop5">
                     <a class="close5" href="#">&times;</a>
-                    <img src="new release content 5.jpg" alt="">
+                    <img src="/Images/new release content 5.jpg" alt="">
                     <h3>Listen to STAY now: </h3>    
                     <div class="icontent5">
                         <ul>
@@ -150,7 +150,7 @@
             <div class="popup6" id="overlay6">
                 <div class="pop6">
                     <a class="close6" href="#">&times;</a>
-                    <img src="new release content 6.jpg" alt="">
+                    <img src="/Images/new release content 6.jpg" alt="">
                     <h3>Listen to GENTO now: </h3>    
                     <div class="icontent6">
                         <ul>
@@ -172,7 +172,7 @@
                 </video> -->
                 <div class="upevent">
                     <div class="event1">
-                    <img src="KODALINE.png" class="card-img-top" alt="...">
+                    <img src="/Images/KODALINE.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="eventitle">KODALINE ASIAN TOUR 2023</h3>
                             <details class="det1">
@@ -190,7 +190,7 @@
                     </div>
 
                     <div class="event2">
-                        <img src="event2.jpg" class="card-img-top2" alt="...">
+                        <img src="/Images/event2.jpg" class="card-img-top2" alt="...">
                         <div class="card-body2">
                             <h3 class="eventitle">DAVAO AURORA FEST</h3>
                             <details class="det2">
@@ -208,7 +208,7 @@
                     </div>
 
                         <div class="event3">
-                            <img src="event3.webp" class="card-img-top3" alt="...">
+                            <img src="/Images/event3.webp" class="card-img-top3" alt="...">
                             <div class="card-body3">
                                 <h3 class="eventitle">RAKRAKAN FESTIVAL 2023</h3>
                                 <details class="det3">
@@ -236,14 +236,14 @@
                 <div class="featuredholder">
                     <div class="featuredcontent">
                         <h3>Homebody - demi x sensei (Remix)</h3>
-                        <img src="featuredsong.jpg" alt="">
-                        <audio controls src="homebody - demi x sensei (remix).mp3">
+                        <img src="/Images/featuredsong.jpg" alt="">
+                        <audio controls src="/Audio Files/homebody - demi x sensei (remix).mp3">
                         </audio>
                     </div>
                     
 
                     <div class="featuredcontent2">
-                        <img src="featuredartist.jpg" alt="">
+                        <img src="/Images/featuredartist.jpg" alt="">
                         <h3>sensei</h3>
                         <p>Explore more of his song!Click below</p>
                         <a href="https://www.youtube.com/@sensenphofficial" target="_blank">Subscribe!</a>
@@ -259,7 +259,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">1</div>
-                    <div class="songimg"><img src="chart1.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart1.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Raining in Manila</div>
                             <div class="artist">Lola Amour</div>
@@ -275,7 +275,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">2</div>
-                    <div class="songimg"><img src="new releas content 2.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/new releas content 2.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Uhaw</div>
                             <div class="artist">Dilaw</div>
@@ -292,7 +292,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">3</div>
-                    <div class="songimg"><img src="chart3.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart3.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Angels Like You</div>
                             <div class="artist">Miley Cyrus</div>
@@ -308,7 +308,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">4</div>
-                    <div class="songimg"><img src="chart4.png" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart4.png" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Pasilyo</div>
                             <div class="artist">SunKissed Lola</div>
@@ -324,7 +324,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">5</div>
-                    <div class="songimg"><img src="chart5.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart5.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Vampire</div>
                             <div class="artist">Olivia Rodrigo</div>
@@ -340,7 +340,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">6</div>
-                    <div class="songimg"><img src="chart6.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart6.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Cruel Summer</div>
                             <div class="artist">Taylor Swift</div>
@@ -356,7 +356,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">7</div>
-                    <div class="songimg"><img src="chart7.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart7.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Gusto</div>
                             <div class="artist">Zack Tabudlo x Al James</div>
@@ -372,7 +372,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">8</div>
-                    <div class="songimg"><img src="chart8.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart8.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">What Was I Made For?</div>
                             <div class="artist">Billie Eilish</div>
@@ -388,7 +388,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">9</div>
-                    <div class="songimg"><img src="chart9.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart9.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Nonsense</div>
                             <div class="artist">Sabrina Carpenter</div>
@@ -404,7 +404,7 @@
             <div class="song-chart">
                 <div class="song">
                     <div class="rank">10</div>
-                    <div class="songimg"><img src="chart10.jpg" alt=""></div>
+                    <div class="songimg"><img src="/Images/chart10.jpg" alt=""></div>
                         <div class="song-details">
                             <div class="song-title">Always</div>
                             <div class="artist">Daniel Caesar</div>
